convert java 25 vector api to executable example